      archives. Natural sort order is the default ordering, which sorts
      numbers in file names based on their natural order (e.g. 1, 2, .., 10),
      while literal order will use standard C sorting (e.g. 1, 23, 4).

    - "Reset zoom" is now bound to CTRL-0 and KeyPad0 by default. Previously,
      CTRL-0 and CTRL-KeyPad0 were used.

    - Added thumbnailer file for Gnome3 integration. Please note that
      comicthumb is unmaintained and not installed by MComix' setup routine
      by default.

    - Updated traditional Chinese translation (by Wayne Su).

    - Updated Hebrew translation (by Isratine Citizen).

    - Updated Japanese translation (by Toshiharu Kudoh).

    - Updated Spanish translation (by Carlos Feliu).

    - Updated simplified Chinese translation (by Zach Cheung).

    - Updated French translation (by Frédéric Chateaux).

MComix 0.99
Release date: 14.07.2012

    - Fixed "Go to page" dialog's thumbnail not scaling depending on dialog
      size.

    - Using the mouse wheel to scroll left now correctly advances to the
      next page in manga mode, instead of going back one page. Scrolling right
      has also been fixed.

    - Multiple open instances of MComix no longer overwrite each others'
      bookmarks when closed.

    - Fixed exception when trying to pack an archive using the archive editor.

    - Fixed a bug that prevented using the "Next archive"/"Previous archive"
      buttons when an empty archive was loaded (by Gabriel Falcone).

    - "Smart scrolling" now also works with the mouse wheel. In smart
      scrolling mode, MComix tries to follow the natural reading flow of a
      comic book by not only scrolling up or down, but also sideways.
      Please not that smart scrolling does not work in "Fit to width" or "Best
      fit mode", as there is no need to scroll sideways in these modes.

    - Zoom is now enabled in all fit modes (best fit, fit to width, fit to
      height).
